<resources>
    <string name="app_name">News Wave</string>
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="subscriptions">Subscriptions</string>
    <string name="profile">Profile</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="read">Read</string>
    <string name="SearchParameters">Search Parameters</string>
    <string name="FilterByText">By text</string>
    <string name="FilterByAuthor">By author</string>
    <string name="FilterByDate">By date</string>
    <string name="minutes_ago">%d minutes ago</string>
    <string name="hours_ago">%d hours ago</string>
    <string name="yesterday_at">Yesterday at %s</string>
    <string name="date_format">d MMMM \'at\' HH:mm</string>
    <string name="subscribe">Subscribe</string>
    <string name="subscribed">Subscribed</string>
    <string name="confirmation">Confirmation</string>
    <string name="positive_answer">Yes</string>
    <string name="negative_answer">No</string>
    <string name="alert_dialog_question">Do you really want to unsubscribe from the %s ?</string>
    <string name="error_load_data">Download error. Check the network connection and download again.</string>
    <string name="download_error">Download error</string>
    <string name="repeat">Repeat</string>
    <string name="retry">Retry</string>
    <string name="sign_in_subscriptions_text">Sign in, and your subscriptions will be here</string>
    <string name="sign_up_no_account_text">If you don\'t have an account, sign up. Your subscriptions will be here afterward</string>
    <string name="sign_in_text">Sign in</string>
    <string name="authorization">Authorization</string>
    <string name="sign_in_message">Please sign in to use the author subscription feature</string>
    <string name="registration_text">Registration</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="no_account_yet_text">Do not have an account yet?</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="registration_message">Enter the information in the appropriate fields below:</string>
    <string name="username">Username</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="sign_up">Sign up</string>
    <string name="already_registered_text">Already have an account,</string>
    <string name="reset_password_hint">Enter the email address to which the password reset email will be sent</string>
    <string name="change_password">Change password</string>
    <string name="subscription_prompt_message">Want to subscribe to this channel?</string>
    <string name="sign_in_required_message">Sign in to subscribe to this channel</string>
    <string name="cancel">Cancel</string>
    <string name="unsubscribe">Unsubscribe</string>
    <string name="author_unknown">Author unknown</string>
    <string name="please_fill_in_all_the_fields">Please fill in all the fields</string>
    <string name="please_enter_your_email">Please enter your email</string>
    <string name="no_internet_connection">No internet connection</string>
    <string name="the_list_of_authors_is_empty_add_new_authors_to_see_them_here">The list of authors is empty. Add new authors to see them here</string>
    <string name="content_language">Content Language</string>
    <string name="country_of_news_source">Country of news source</string>
    <string name="interface_language">Interface language</string>
    <string name="invalid_username_length" translatable="false">Username must be between 3 and 20 characters long</string>
    <string name="invalid_email_format" translatable="false">Invalid email format</string>
    <string name="invalid_password_length" translatable="false">The given password is invalid. [ Password should be at least 6 characters ]</string>
    <string name="invalid_first_name_length" translatable="false">First name must be between 2 and 20 characters long</string>
    <string name="invalid_last_name_length" translatable="false">Last name must be between 2 and 20 characters long</string>
    <string name="system">Match system language</string>
    <string name="sign_out">Sign out</string>
    <string name="no_news_for_criteria">No news found for the selected search criteria. Please try adjusting the country or language settings</string>
    <string name="news_list_is_empty_or_invalid_parameters" translatable="false">News list is empty or invalid parameters!</string>
    <string name="error_loading_news_by_filter" translatable="false">Error loading news by filter: %1$s</string>
    <string name="error_no_internet_in_search">No Internet connection in search</string>
    <string name="invalid_filter" translatable="false">Invalid filter: %1$s</string>
    <string name="yyyy_mm_dd" translatable="false">yyyy-MM-dd</string>
    <string name="unknown_error" translatable="false">Unknown error</string>
    <string name="errorMessageNoResultsFound">No results found for the query</string>
    <string name="errorHTTP402" translatable="false">HTTP 402</string>
    <string name="no_recent_news_message" translatable="false">There are no recent news articles by this author</string>
    <string name="reset_link_sent_successfully">The reset link has been successfully sent</string>
    <string-array name="languages_interface_array">
        <item>Match system language</item>
        <item>Русский</item>
        <item>English</item>
    </string-array>
    <string-array name="languages_content_array">
        <item>Afar</item>
        <item>Amharic</item>
        <item>Arabic</item>
        <item>Bengali</item>
        <item>Bosnian</item>
        <item>Bulgarian</item>
        <item>Burmese</item>
        <item>Chinese</item>
        <item>Croatian</item>
        <item>Czech</item>
        <item>Danish</item>
        <item>Dutch</item>
        <item>English</item>
        <item>Estonian</item>
        <item>Finnish</item>
        <item>French</item>
        <item>German</item>
        <item>Greek</item>
        <item>Hebrew</item>
        <item>Hindi</item>
        <item>Hungarian</item>
        <item>Icelandic</item>
        <item>Indonesian</item>
        <item>Italian</item>
        <item>Japanese</item>
        <item>Korean</item>
        <item>Lao</item>
        <item>Latvian</item>
        <item>Lithuanian</item>
        <item>Macedonian</item>
        <item>Malay</item>
        <item>Maltese</item>
        <item>Marathi</item>
        <item>Māori</item>
        <item>Nepali</item>
        <item>Norwegian</item>
        <item>Persian</item>
        <item>Polish</item>
        <item>Portuguese</item>
        <item>Romanian</item>
        <item>Russian</item>
        <item>Serbian</item>
        <item>Sinhalese</item>
        <item>Slovak</item>
        <item>Slovene</item>
        <item>Somali</item>
        <item>Spanish</item>
        <item>Swedish</item>
        <item>Tajik</item>
        <item>Tamil</item>
        <item>Telugu</item>
        <item>Thai</item>
        <item>Turkish</item>
        <item>Ukrainian</item>
        <item>Urdu</item>
        <item>Uzbek</item>
        <item>Vietnamese</item>

    </string-array>
</resources>