<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".presentation.fragments.SubscribedAuthorsFragment">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rcAuthors"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="56dp"
        android:visibility="gone"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

    <TextView
        android:id="@+id/tvNoAuthors"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:paddingStart="36dp"
        android:paddingEnd="36dp"
        android:text="@string/the_list_of_authors_is_empty_add_new_authors_to_see_them_here"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:visibility="gone" />

    <LinearLayout
        android:id="@+id/textContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingStart="36dp"
        android:paddingEnd="36dp">


        <TextView
            android:id="@+id/tvSignInText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/sign_in_subscriptions_text"
            android:textColor="@color/white"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/tvHintText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="24dp"
            android:gravity="center"
            android:paddingStart="34dp"
            android:paddingEnd="34dp"
            android:text="@string/sign_up_no_account_text"
            android:textColor="#7F7F7F"
            android:textSize="16sp" />

        <Button
            android:id="@+id/btLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:background="@drawable/button_sign_in_white"
            android:text="@string/sign_in_text"
            android:textAllCaps="false" />

    </LinearLayout>

    <TextView
        android:id="@+id/tvRetry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:padding="8dp"
        android:text="@string/retry"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:visibility="gone" />

    <ProgressBar
        android:id="@+id/pgNews"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:indeterminateTint="@android:color/darker_gray"
        android:visibility="gone" />

</FrameLayout>