<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".presentation.fragments.SignInFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="56dp"
        android:background="@color/black">

        <TextView
            android:id="@+id/tvAuthorization"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="50dp"
            android:text="@string/authorization"
            android:textColor="@color/white"
            android:textSize="32sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvHintMessage"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:alpha="0.8"
            android:text="@string/sign_in_message"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/tvAuthorization"
            app:layout_constraintTop_toBottomOf="@id/tvAuthorization" />

        <TextView
            android:id="@+id/tvLabelEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:alpha="0.6"
            android:text="@string/email"
            android:textColor="@color/white"
            android:textSize="12sp"
            app:layout_constraintBottom_toTopOf="@+id/etEmail"
            app:layout_constraintStart_toStartOf="@id/etEmail" />

        <EditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="182dp"
            android:layout_marginEnd="50dp"
            android:autofillHints="emailAddress"
            android:backgroundTint="@color/white"
            android:inputType="textEmailAddress"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            app:layout_constraintTop_toBottomOf="@+id/tvHintMessage" />

        <TextView
            android:id="@+id/tvLabelPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:alpha="0.6"
            android:text="@string/password"
            android:textColor="@color/white"
            android:textSize="12sp"
            app:layout_constraintBottom_toTopOf="@+id/etPassword"
            app:layout_constraintStart_toStartOf="@id/etPassword" />

        <EditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="48dp"
            android:layout_marginEnd="50dp"
            android:autofillHints="password"
            android:backgroundTint="@color/white"
            android:inputType="textPassword"
            android:textColor="@color/white"
            app:layout_constraintTop_toBottomOf="@+id/etEmail" />

        <TextView
            android:id="@+id/tvForgotPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:alpha="0.6"
            android:text="@string/forgot_password"
            android:textColor="@color/white"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="@id/etPassword"
            app:layout_constraintTop_toBottomOf="@id/etPassword" />

        <Button
            android:id="@+id/btSignIn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="96dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/button_sign_in_orange"
            android:text="@string/sign_in_text"
            android:textAllCaps="false"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="@id/etPassword"
            app:layout_constraintStart_toStartOf="@id/etPassword"
            app:layout_constraintTop_toBottomOf="@id/etPassword" />

        <TextView
            android:id="@+id/tvNoAccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="56dp"
            android:alpha="0.3"
            android:layout_marginTop="16dp"
            android:text="@string/no_account_yet_text"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@id/etPassword"
            app:layout_constraintTop_toBottomOf="@id/btSignIn" />

        <TextView
            android:id="@+id/tvRegistration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/sign_up"
            android:textColor="@color/white"
            app:layout_constraintStart_toEndOf="@id/tvNoAccount"
            app:layout_constraintTop_toTopOf="@id/tvNoAccount" />

        <View
            android:layout_width="0dp"
            android:layout_height="2dp"
            android:background="@color/white"
            app:layout_constraintEnd_toEndOf="@id/tvRegistration"
            app:layout_constraintStart_toStartOf="@id/tvRegistration"
            app:layout_constraintTop_toBottomOf="@id/tvRegistration" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>