<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/black"
    tools:context=".presentation.fragments.ForgotPasswordFragment">

    <TextView
        android:id="@+id/tvForgotPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="50dp"
        android:text="@string/forgot_password"
        android:textColor="@color/white"
        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvHintMessage"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:alpha="0.8"
        android:text="@string/reset_password_hint"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="@+id/tvForgotPassword"
        app:layout_constraintTop_toBottomOf="@id/tvForgotPassword"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/tvLabelEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/etEmail"
        app:layout_constraintStart_toStartOf="@id/etEmail"
        android:layout_marginBottom="4dp"
        android:textSize="12sp"
        android:text="@string/email"
        android:alpha="0.6"
        android:textColor="@color/white"/>

    <EditText
        android:id="@+id/etEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="259dp"
        android:layout_marginEnd="50dp"
        android:backgroundTint="@color/white"
        android:textColorHint="@color/white"
        android:inputType="textEmailAddress"
        android:autofillHints="emailAddress"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@+id/tvHintMessage"/>

    <Button
        android:id="@+id/btReset"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="96dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:textColor="@color/white"
        android:text="@string/reset_password"
        android:textAllCaps="false"
        app:layout_constraintTop_toBottomOf="@id/etEmail"
        app:layout_constraintStart_toStartOf="@id/etEmail"
        app:layout_constraintEnd_toEndOf="@id/etEmail"
        android:background="@drawable/button_sign_in_orange" />




</androidx.constraintlayout.widget.ConstraintLayout>